# app/Http/Controllers/API/Rehab/PenilaianLembagaDocAPI.php
@@ -1,0 +1,48 @@
+<?php
+
+/**
+    * @SWG\Get(
+    *   path="/penilaianlembaga",
+    *   tags={"Penilaian Lembaga"},
+    *   summary="Get List Data Penilaian Lembaga",
+    *   operationId="get data",
+    *   @SWG\Parameter(
+    *     name="Authorization",
+    *     in="header",
+    *     description="Authorization Token",
+    *     required=true,
+    *     type="string"
+    *   ),
+    *   @SWG\Response(response=200, description="successful operation"),
+    *   @SWG\Response(response=406, description="not acceptable"),
+    *   @SWG\Response(response=500, description="internal server error")
+    * )
+    *
+*/
+
+/**
+    * @SWG\Get(
+    *   path="/penilaianlembaga/{id}",
+    *   tags={"Penilaian Lembaga"},
+    *   summary="Get List Data Penilaian Lembaga by id",
+    *   operationId="get data by id",
+    *   @SWG\Parameter(
+    *     name="Authorization",
+    *     in="header",
+    *     description="Authorization Token",
+    *     required=true,
+    *     type="string"
+    *   ),
+    *   @SWG\Parameter(
+    *     name="id",
+    *     in="path",
+    *     description="id data",
+    *     required=true,
+    *     type="integer"
+    *   ),
+    *   @SWG\Response(response=200, description="successful operation"),
+    *   @SWG\Response(response=406, description="not acceptable"),
+    *   @SWG\Response(response=500, description="internal server error")
+    * )
+    *
+*/
